<resources>
    <string name="app_name">Amazon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello, Nicolas</string>
    <string name="action_shoppingcart">Shopping Cart</string>

    <string name="nav_header_desc">nav_header_desc</string>
    <string name="action_bar_image_desc">amazon logo</string>

    <string name="menu_home">Home</string>
    <string name="menu_your_order">Your Orders</string>
    <string name="menu_buy_again">Buy Again</string>
    <string name="menu_wishlist">Your Wish List</string>
    <string name="menu_account">Your Account</string>
    <string name="menu_department">Shop by Department</string>

    <string name="menu_today">Today\'s Deals</string>
    <string name="menu_gift_card">Gift Card</string>
    <string name="menu_prime">Prime</string>
    <string name="menu_fresh">Amazon Fresh</string>
    <string name="menu_all_programmes">See All Programmes</string>

    <string name="menu_notification">Your Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_service">Customer Service</string>
    <string name="menu_legal">Legal</string>

    <string name="langer_string">Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could Miusov, as a man man of breeding and deilcacy, could </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
